...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <Spinner
                android:id="@+id/spinnerRoom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:theme="@style/spinnerTheme"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/in_dateFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="4dp"
                android:inputType="text"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="@+id/spinnerRoom"
                app:layout_constraintTop_toBottomOf="@+id/spinnerRoom" />

            <Button
                android:id="@+id/btn_dateFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SELECT"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toStartOf="@+id/btn_dateClear"
                app:layout_constraintTop_toBottomOf="@+id/spinnerRoom" />

            <Button
                android:id="@+id/btn_dateClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
